--- a/app/src/main/res/layout/user_rate_list_row.xml
+++ b/app/src/main/res/layout/user_rate_list_row.xml
@@ -2,11 +2,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
@@ -65,7 +63,7 @@
                     android:id="@+id/r"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rate:"
+                    android:text="@string/rate"
                     android:textColor="@color/title"
                     android:textStyle="bold"
                     android:layout_alignParentLeft="true"
@@ -85,7 +83,7 @@
                     android:id="@+id/rP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="You can win:"
+                    android:text="@string/you_can_win"
                     android:textColor="@color/title"
                     android:textStyle="bold"
                     android:layout_alignParentTop="true"
