--- a/app/src/main/res/layout/fragment_cuurent_user_rate.xml
+++ b/app/src/main/res/layout/fragment_cuurent_user_rate.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/Table"
+        android:id="@+id/fabLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".fragments.currentUserRateFragment.CurrentUserRateFragment">
 
         <android.support.v7.widget.RecyclerView
@@ -20,7 +22,6 @@
             android:layout_marginTop="0dp"
             android:scrollbars="vertical" />
 
-
         <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/progress_view_user_rate"
             android:layout_width="40dp"
@@ -29,5 +30,14 @@
             app:cpv_animAutostart="true"
             app:cpv_color="@color/colorPrimaryDark"
             app:cpv_indeterminate="true" />
-    </FrameLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@android:drawable/ic_dialog_email" />
+
+    </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
