--- a/app/src/main/res/layout/fragment_cuurent_user_rate.xml
+++ b/app/src/main/res/layout/fragment_cuurent_user_rate.xml
@@ -1,4 +1,5 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refreshUserRate"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -32,12 +33,14 @@
             app:cpv_indeterminate="true" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/fabHelp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@android:drawable/ic_dialog_email" />
+            android:src="@android:drawable/ic_menu_help"
+            android:background="@color/colorPrimary"
+            app:backgroundTint="@color/colorPrimary" />
 
     </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
