--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -32,7 +32,7 @@
                 android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/lorem_ipsum"
+                android:text="@string/help_text"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textSize="16sp"
                 android:gravity="top|fill" />
