--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     android:clickable="true"
     android:focusableInTouchMode="true"
@@ -24,7 +24,7 @@
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/soccer_football_icon" />
+            android:src="@drawable/icon_final" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="20dp" />
 
         <TextView
@@ -42,11 +42,12 @@
             android:gravity="center_horizontal"
             android:padding="@dimen/margin_16dp"
             android:text="@string/forgot_password_msg"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="14dp" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
+            android:theme="@style/TextLabel"
             android:layout_height="wrap_content">
 
             <EditText
@@ -57,20 +58,20 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white" />
+                android:textColor="@color/colorPrimaryDark" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Login Button -->
 
         <Button
-            android:id="@+id/btn_reset_password"
+            android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:theme="@style/MaterialButton"
             android:text="@string/btn_reset_password"
-            android:textColor="@android:color/white" />
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:theme="@style/MaterialButton" />
 
         <Button
             android:id="@+id/btn_back"
@@ -80,6 +81,7 @@
             android:background="@null"
             android:text="@string/btn_back"
             android:textColor="@color/colorAccent" />
+
 
     </LinearLayout>
 
@@ -91,3 +93,4 @@
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
+
