--- a/app/src/main/res/layout/league_table_row.xml
+++ b/app/src/main/res/layout/league_table_row.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/background_floating_material_light">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv"
