--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -1,105 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
-        
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/firstteam"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
-
-        <ImageView
-            android:id="@+id/secondteam"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
-
-        <TextView
-            android:id="@+id/homeTeam"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/awayTeam"
-            android:layout_alignBottom="@+id/awayTeam"
-            android:layout_toEndOf="@+id/firstteam"
-            android:layout_toRightOf="@+id/firstteam"
-            android:maxLength="10"
-            android:textColor="@color/title"
-            android:paddingLeft="10dp" />
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp">
 
-        <TextView
-            android:id="@+id/awayTeam"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/secondteam"
-            android:layout_marginBottom="14dp"
-            android:layout_toLeftOf="@+id/secondteam"
-            android:layout_toStartOf="@+id/secondteam"
-            android:maxLength="10"
-            android:textColor="@color/title"
-            android:paddingRight="10dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/goalsAwayTeam"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/title"
-            android:layout_below="@+id/textViewDate"
-            android:layout_centerHorizontal="true" />
+                <RelativeLayout
+                    android:id="@+id/match"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:padding="@dimen/margin_16dp">
 
-        <TextView
-            android:id="@+id/textViewScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/homeTeam"
-            android:layout_centerHorizontal="true"
-            android:maxLength="10"
-            android:text=" - "
-            android:textColor="@color/title" />
+                    <ImageView
+                        android:id="@+id/firstteam"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:src="@drawable/account" />
 
-        <TextView
-            android:id="@+id/textViewStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:maxLength="10"
-            android:textColor="@color/title" />
+                    <ImageView
+                        android:id="@+id/secondteam"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:src="@drawable/account" />
 
-        <TextView
-            android:id="@+id/textViewDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/title"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/homeTeam"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/awayTeam"
+                        android:layout_alignBottom="@+id/awayTeam"
+                        android:layout_toEndOf="@+id/firstteam"
+                        android:layout_toRightOf="@+id/firstteam"
+                        android:maxLength="8"
+                        android:paddingLeft="5dp"
+                        android:text="@string/settings_username_title"
+                        android:textColor="@color/dark"
+                        android:textSize="@dimen/material_text_subhead" />
 
-</RelativeLayout>
+                    <TextView
+                        android:id="@+id/awayTeam"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/secondteam"
+                        android:layout_marginBottom="14dp"
+                        android:layout_toLeftOf="@+id/secondteam"
+                        android:layout_toStartOf="@+id/secondteam"
+                        android:maxLength="8"
+                        android:paddingRight="5dp"
+                        android:text="@string/settings_username_title"
+                        android:textColor="@color/dark"
+                        android:textSize="@dimen/material_text_subhead" />
+
+                    <TextView
+                        android:id="@+id/textViewScore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/homeTeam"
+                        android:layout_centerHorizontal="true"
+                        android:maxLength="10"
+                        android:text=" - "
+                        android:textColor="@color/dark"
+                        android:textSize="@dimen/material_text_subhead" />
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/matchdescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:paddingBottom="@dimen/margin_16dp"
+                    android:paddingLeft="@dimen/margin_16dp"
+                    android:paddingRight="@dimen/margin_16dp">
+
+                    <TextView
+                        android:id="@+id/goalsAwayTeam"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/settings_username_title"
+                        android:textSize="@dimen/material_text_button"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textViewStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:maxLength="10"
+                        android:text="@string/settings_username_title"
+                        android:textSize="@dimen/material_text_button" />
+
+                    <TextView
+                        android:id="@+id/textViewDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:fontFamily="sans-serif"
+                        android:text="@string/settings_username_title"
+                        android:textSize="@dimen/material_text_button" />
+                </RelativeLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
