--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2196f3</color>
-    <color name="colorPrimaryDark">#2196f3</color>
-    <color name="colorAccent">#c1c1c1</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#fff</color>
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
@@ -24,6 +24,7 @@
 
     <color name="year">#999999</color>
     <color name="title">#222222</color>
+    <color name="grey">#BDBDBD</color>
 
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
