--- a/app/src/main/res/layout/fragment_cuurent_user_rate.xml
+++ b/app/src/main/res/layout/fragment_cuurent_user_rate.xml
@@ -13,6 +13,7 @@
         android:fitsSystemWindows="true"
         tools:context=".fragments.currentUserRateFragment.CurrentUserRateFragment">
 
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_user_rate"
             android:layout_width="match_parent"
@@ -21,7 +22,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            android:splitMotionEvents="true"/>
 
         <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/progress_view_user_rate"
