--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:weightSum="1">
 
         <ImageView
-            android:layout_width="141dp"
+            android:layout_width="140dp"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
@@ -67,25 +67,53 @@
             android:theme="@style/MaterialButton" />
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_reset_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:text="@string/btn_forgot_password"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimary" />
+
+            <!-- Link to Login Screen -->
+
+            <Button
+                android:id="@+id/btn_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:text="@string/btn_link_to_register"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimary" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/parentLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+        android:paddingTop="15dp"
             android:orientation="vertical">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textColor="@color/colorPrimary"
-    android:text="OR"
-    android:layout_gravity="center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="OR"
+                android:textColor="@color/colorPrimary" />
+
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dip"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-
+                android:layout_marginTop="20dip"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="@string/fbloginText" />
@@ -101,35 +129,6 @@
             android:layout_marginBottom="20dp"
             android:visibility="gone" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-                <Button
-                    android:id="@+id/btn_reset_password"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dip"
-                    android:text="@string/btn_forgot_password"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:theme="@style/MaterialButton" />
-
-                <!-- Link to Login Screen -->
-
-                <Button
-                    android:id="@+id/btn_signup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/btn_link_to_register"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:theme="@style/MaterialButton"
-                    android:layout_alignTop="@+id/btn_reset_password"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_toRightOf="@+id/btn_reset_password"
-                    android:layout_toEndOf="@+id/btn_reset_password" />
-        </RelativeLayout>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
