--- a/app/src/main/res/layout/dialog_rate.xml
+++ b/app/src/main/res/layout/dialog_rate.xml
@@ -15,7 +15,11 @@
         android:digits="5"
         android:ems="5"
         android:inputType="textCapSentences"
-        android:maxLength="5">
+        android:maxLength="5"
+        android:textCursorDrawable="@null"
+        android:textColor="@color/colorPrimary"
+        android:theme="@style/TextLabel">
+
         <requestFocus />
     </EditText>
 
