--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -14,13 +14,13 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:clickable="true"
+            android:focusable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -36,8 +36,7 @@
                         android:layout_height="50dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:src="@drawable/account" />
+                        android:layout_alignParentTop="true" />
 
                     <ImageView
                         android:id="@+id/secondteam"
@@ -45,8 +44,7 @@
                         android:layout_height="50dp"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:src="@drawable/account" />
+                        android:layout_alignParentTop="true" />
 
                     <TextView
                         android:id="@+id/homeTeam"
@@ -58,7 +56,6 @@
                         android:layout_toRightOf="@+id/firstteam"
                         android:maxLength="8"
                         android:paddingLeft="5dp"
-                        android:text="@string/settings_username_title"
                         android:textColor="@color/dark"
                         android:textSize="@dimen/material_text_subhead" />
 
@@ -72,7 +69,6 @@
                         android:layout_toStartOf="@+id/secondteam"
                         android:maxLength="8"
                         android:paddingRight="5dp"
-                        android:text="@string/settings_username_title"
                         android:textColor="@color/dark"
                         android:textSize="@dimen/material_text_subhead" />
 
@@ -86,25 +82,15 @@
                         android:text=" - "
                         android:textColor="@color/dark"
                         android:textSize="@dimen/material_text_subhead" />
-                </RelativeLayout>
 
-
-                <RelativeLayout
-                    android:id="@+id/matchdescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/selectableItemBackground"
-                    android:paddingBottom="@dimen/margin_16dp"
-                    android:paddingLeft="@dimen/margin_16dp"
-                    android:paddingRight="@dimen/margin_16dp">
 
                     <TextView
                         android:id="@+id/goalsAwayTeam"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
+                        android:layout_below="@+id/awayTeam"
                         android:layout_centerHorizontal="true"
-                        android:text="@string/settings_username_title"
+                        android:layout_marginTop="16dp"
                         android:textSize="@dimen/material_text_button"
                         android:textStyle="bold" />
 
@@ -114,20 +100,18 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_below="@+id/secondteam"
+                        android:layout_marginTop="16dp"
                         android:maxLength="10"
-                        android:text="@string/settings_username_title"
                         android:textSize="@dimen/material_text_button" />
 
                     <TextView
                         android:id="@+id/textViewDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_below="@+id/firstteam"
+                        android:layout_marginTop="16dp"
                         android:fontFamily="sans-serif"
-                        android:text="@string/settings_username_title"
                         android:textSize="@dimen/material_text_button" />
                 </RelativeLayout>
             </LinearLayout>
