--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="OR"
+                android:text="@string/or"
                 android:textColor="@color/colorPrimary" />
 
             <com.facebook.login.widget.LoginButton
