--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -20,8 +20,8 @@
 
 
         <ImageView
-            android:layout_width="140dp"
-            android:layout_height="@dimen/logo_w_h"
+            android:layout_width="@dimen/logo_image_w"
+            android:layout_height="@dimen/logo_image_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
             android:src="@drawable/icon_final" />
@@ -51,7 +51,7 @@
             android:theme="@style/TextLabel">
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -77,7 +77,7 @@
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/login_progress_bar"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center|bottom"
