--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,6 @@
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="logo_w_h">100dp</dimen>
 
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
@@ -22,7 +21,21 @@
     <dimen name="material_text_display4">112sp</dimen>
     <dimen name="list_item_padding_sides">16dp</dimen>
     <dimen name="list_item_height">80dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="ic_clear_margin">16dp</dimen>
+
+    <dimen name="logo_image_w">140dp</dimen>
+    <dimen name="logo_image_h">140dp</dimen>
+    <dimen name="margin_bottom_image_login">30dp</dimen>
+    <dimen name="et_margin_bottom">10dp</dimen>
+    <dimen name="btn_margin_top">20dp</dimen>
+
+    <dimen name="facebook_linear_padding_top">15dp</dimen>
+    <dimen name="facebook_button_ml">10dp</dimen>
+    <dimen name="facebook_button_mr">10dp</dimen>
+    <dimen name="facebook_button_mt">20dp</dimen>
+    <dimen name="facebook_button_pb">10dp</dimen>
+    <dimen name="facebook_button_pt">10dp</dimen>
+
+    <dimen name="pb_margin_b">20dp</dimen>
 </resources>
