--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -11,26 +11,25 @@
     tools:context=".activity.loginActivity.LoginActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/layout_margin_top"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/margin_16dp">
-
 
         <ImageView
             android:layout_width="@dimen/logo_image_w"
             android:layout_height="@dimen/logo_image_h"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="@dimen/layout_margin_bottom"
             android:src="@drawable/icon_final" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:padding="10dp"
+            android:padding="@dimen/tv_pudding"
             android:text="@string/lbl_forgot_password"
             android:textColor="@color/colorPrimary"
             android:textSize="20dp" />
@@ -38,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/layout_margin_bottom"
             android:gravity="center_horizontal"
             android:padding="@dimen/margin_16dp"
             android:text="@string/forgot_password_msg"
@@ -54,34 +53,23 @@
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="@dimen/et_margin_bottom"
+                android:layout_marginTop="@dimen/et_margin_top"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/colorPrimaryDark" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Login Button -->
-
         <Button
             android:id="@+id/btn_reset"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
+            android:layout_marginTop="@dimen/layout_margin_top"
             android:text="@string/btn_reset_password"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:theme="@style/MaterialButton" />
 
-
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/login_progress_bar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
 
