--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/layout_margin_top"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/margin_16dp">
@@ -21,7 +21,7 @@
             android:layout_width="@dimen/logo_image_w"
             android:layout_height="@dimen/logo_image_h"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="@dimen/layout_margin_bottom"
             android:src="@drawable/icon_final" />
 
         <android.support.design.widget.TextInputLayout
@@ -62,24 +62,14 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/sign_up_button"
+            android:id="@+id/btn_sign_up"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/layout_margin_top"
             android:text="@string/action_sign_in_short"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:theme="@style/MaterialButton" />
-
-
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/login_progress_bar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
